@@ -1,3 +1,9 @@
+2004-01-07  Loren J. Rittle  <ljrittle@acm.org>
+
+	(re-open) PR libstdc++/12658
+	* src/locale_init.cc (locale::locale): Remove ill-scoped mutex.
+	(locale::global): Likewise.
+
 2004-01-07  Paolo Carlini  <pcarlini@suse.de>
 
 	* testsuite/27_io/basic_istream/extractors_other/char/9318-in.cc:
